# cmake-learning

./: README.md
1b/: CMakeLists.txt  gen.sh
1b/src/: coollib.cpp  main.cpp
1b/src/inc/: coollib.hpp
1c/: CMakeLists.txt  gen.sh
1c/Demo/: CMakeLists.txt  demo.cpp
1c/Hello/: CMakeLists.txt  hello.cpp
1c/Hello/inc/: hello.hpp
task1/: CMakeLists.txt
task1/src/: main.cpp  printer.cpp
task1/src/inc/: printer.h
